<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewNoteLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/titleET"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_35sdp" />

            <LinearLayout
                android:id="@+id/editNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/edit_option"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/edit"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/noteDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="start"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_200" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Added on :"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/noteDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>