<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_note"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp">

            <TextView
                android:id="@+id/titleET"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/titleET"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descET"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/description"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/titleET"
                app:layout_constraintTop_toBottomOf="@+id/titleET" />

            <TextView
                android:id="@+id/dateET"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/date_added"
                android:textColor="@color/black_two"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/descET"
                app:layout_constraintTop_toBottomOf="@+id/descET" />

            <TextView
                android:id="@+id/editIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/edit_option"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleET" />

            <TextView
                android:id="@+id/deleteIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/delete_option"
                app:layout_constraintBottom_toBottomOf="@+id/dateET"
                app:layout_constraintEnd_toEndOf="@+id/editIV"
                app:layout_constraintStart_toStartOf="@+id/editIV"
                app:layout_constraintTop_toBottomOf="@+id/editIV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>